# droidforge

./: .f12  .gitignore  CREDITS  Cables.ai  ChangeLog-beta5-1.1.txt  ChangeLog.txt  Circuit Icon.ai  Circuit Icons.graffle  DMG Background.ai  Dockerfile  Icons.ai  Info.plist  Jack types.ai  Keyboard shortcuts.ods  LIESMICH.Deploy  LIESMICH.Ideen  LIESMICH.Windows  LIESMICH.macrelease  Makefile  README  TODO  Zugfahrt-Schweiz  _DS_Store  droidforge-icon.ai  macmidiexample.cpp  macrelease  midi.cpp  testpatch.ini  update-cables  update-firmware  update-icon  version  winrelease
droidforge/: .gitignore  CMakeLists.txt  DROID Forge.qbs  animatedindicator.h  atom.h  atomcable.cpp  atomcable.h  atominvalid.cpp  atomnumber.cpp  atomnumber.h  atomregister.cpp  atomregister.h  atomselector.cpp  atomselector.h  atomselectordialog.cpp  atomselectordialog.h  atomsubselector.cpp  atomsubselector.h  cableselector.cpp  cableselector.h  circuit.cpp  circuit.h  circuitchoosedialog.cpp  circuitchoosedialog.h  circuitcollection.cpp  circuitcollection.h  circuitinfoview.cpp  circuitinfoview.h  circuittype.h  circuitview.cpp  circuitview.h  colors.h  colors_dark.h  colors_light.h  commentdialog.cpp  commentdialog.h  controllerchoosedialog.cpp  controllerchoosedialog.h  controllerremovaldialog.cpp  controllerremovaldialog.h  (+135 more)
droidforge/Patch/: hirn.h
droidforge/firmware/: droid-blue-6.fw  droid-magenta-1.fw  droid-magenta-2.fw  droid-magenta-3.fw  droid-magenta-5.fw  e4-magenta-1.fw  m4-orange-3.fw  master18-blue-6.fw  master18-magenta-1.fw  master18-magenta-2.fw  master18-magenta-3.fw  master18-magenta-5.fw  x7-orange-1012.fw
droidforge/main/: cablestatusindicator.cpp  cablestatusindicator.h  clipboard.cpp  clipboard.h  clipboardindicator.cpp  clipboardindicator.h  colorscheme.cpp  colorscheme.h  dragsectionindicator.cpp  droidfirmware.cpp  droidfirmware.h  editoractions.cpp  editoractions.h  editorstate.h  globals.h  iconbase.cpp  iconbase.h  interactivepatchoperation.cpp  interactivepatchoperation.h  main.cpp  mainwindow.cpp  mainwindow.h  memoryindicator.cpp  memoryindicator.h  mousedragger.cpp  pageselector.cpp  pageselector.h  patchgenerator.cpp  patchgenerator.h  patchgeneratorbase.cpp  patchgeneratorbase.h  patchgeneratordialog.cpp  patchgeneratordialog.h  patchoperator.cpp  patchoperator.h  patchproblemindicator.cpp  patchproblemindicator.h  patchpropertiesdialog.cpp  patchpropertiesdialog.h  patchsectionmanager.cpp  (+23 more)
droidforge/modules/: keycapturelineedit.cpp  manualviewer.cpp  manualviewer.h  module.cpp  module.h  moduleb32.cpp  moduleb32.h  moduleblind.h  modulebling.cpp  modulebling.h  modulebuilder.cpp  modulebuilder.h  modulee4.cpp  modulee4.h  moduleg8.cpp  moduleg8.h  moduleinvalid.cpp  moduleinvalid.h  modulem4.cpp  modulem4.h  modulemaster.cpp  modulemaster.h  modulemaster18.cpp  modulemaster18.h  modulep10.cpp  modulep10.h  modulep2b8.cpp  modulep2b8.h  modulep4b2.cpp  modulep4b2.h  modulep8s8.cpp  modulep8s8.h  modules10.cpp  modules10.h  modulex7.cpp  modulex7.h  pageselector.cpp  pageselector.h  usermanual.cpp  usermanual.h
droidforge/os/: macmidihost.cpp  macmidihost.h  midihost.cpp  midihost.h  os.h  windowsmidihost.cpp  windowsmidihost.h
droidforge/parser/: generalparseexception.cpp  patchparser.cpp  patchparser.h  statusdump.cpp  statusdump.h
droidforge/patch/: atom.cpp  atom.h  atomcable.cpp  atomcable.h  atominvalid.cpp  atominvalid.h  atomnumber.cpp  atomnumber.h  atomregister.cpp  atomregister.h  circuit.cpp  circuit.h  globals.h  jackassignment.cpp  jackassignment.h  jackassignmentinput.cpp  jackassignmentinput.h  jackassignmentoutput.cpp  jackassignmentoutput.h  jackassignmentunknown.cpp  jackassignmentunknown.h  jackdeduplicator.cpp  jackdeduplicator.h  patch.cpp  patch.h  patcheditengine.cpp  patcheditengine.h  patchproblem.h  patchproblemindicator.cpp  patchproblemindicator.h  patchsection.cpp  patchsection.h  patchversion.h  registercomments.cpp  registercomments.h  registerlabels.cpp  registerlabels.h  registerlist.cpp  registerlist.h  registertypes.cpp  (+5 more)
droidforge/patchview/: atomoneliner.h  atomselectordialog.h  atomsubselector.h  cablecolorizer.cpp  cablecolorizer.h  circuitchoosedialog.cpp  circuitchoosedialog.h  circuitcollection.cpp  circuitinfoview.cpp  circuitview.cpp  circuitview.h  clipboard.cpp  clipboard.h  clipboardindicator.cpp  commentdialog.cpp  commentdialog.h  controlselector.cpp  cursorposition.cpp  cursorposition.h  findpanel.cpp  findpanel.h  framecursor.cpp  framecursor.h  iconmarker.cpp  iconmarker.h  infomarker.cpp  infomarker.h  inputoutputselector.cpp  jackchoosedialog.cpp  jackview.cpp  memoryanalysiswindow.cpp  memoryanalysiswindow.h  numberselector.h  patchintegrationdialog.cpp  patchintegrationdialog.h  patchsectiontitleview.cpp  patchsectionview.cpp  patchsectionview.h  patchview.cpp  patchview.h  (+10 more)
droidforge/pg/: .f12  e4blink  megaseq  minimal  pg.py  sequencer
droidforge/rackview/: animatedindicator.cpp  animatedindicator.h  controllerchoosedialog.cpp  controllerchoosedialog.h  controllerlabellingdialog.cpp  controllerlabellingdialog.h  controllerremovaldialog.cpp  controllerselector.cpp  controllerselector.h  dragcontrollerindicator.cpp  dragregisterindicator.cpp  dragregisterindicator.h  mousedragger.cpp  mousedragger.h  patchsectiontitleview.cpp  patchsectiontitleview.h  rackview.cpp  rackview.h  registerlabelwidget.cpp  registerlabelwidget.h  registermarker.cpp  (+2 more)
forgecmake/: CMakeLists.txt  atomnumber.cpp  atomoneliner.h  cablecolorizer.cpp  cablestatusindicator.h  commentdialog.cpp  controllerselector.cpp  dialog.h  dragcontrollerindicator.h  dragregisterindicator.cpp  droidfirmware.cpp  globals.h  hintdialog.h  iconbase.h  inputoutputselector.h  inputvalidationexception.h  jackassignment.h  keycapturelineedit.h  module.h  moduleblind.h  modulebuilder.h  modulem4.h  modulemaster.h  modulex7.h  numberselector.cpp  numberselector.h  pageselector.cpp  pageselector.h  patchintegrationdialog.h  patchsection.cpp  patchsectionview.h  patchview.h  registertypes.h  updatehub.cpp  usermanual.cpp  usermanual.h
(+97 files in other folders)
